--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,11 @@ button {
     border-radius: 50%;
 }
 
+.postPic {
+    width: 500px;
+    height: 500px;
+}
+
 .postUsername, .commentUsername {
     display: inline-block;
     margin-left: 5px;
@@ -41,11 +46,17 @@ button {
     background-color: white;
     border: 1px solid rgb(201, 201, 201);
     border-left-style: solid;
-    /* border-left-color: green; */
     border-left: 4px solid rgb(11, 94, 215);
-    /* border-radius: 15px; */
     width: 40%;
     margin-block-end: 10px;
+    margin: auto;
+    overflow-wrap: break-word;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
     margin: auto;
     overflow-wrap: break-word;
 }
@@ -65,10 +76,7 @@ button {
 }
 
 .postMisc a {
-    /* width: 75px;
-    height: 75px; */
     margin: 5px;
-    /* margin: auto; */
 }
 
 .paginator {
